# SQLite_DB_Viewer

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  deploy.sh  enrich_annotations.py  example_database.db  gcloudignore  pyproject.toml  requirements.txt  server.py
cloud/: startup.py
docs/: decisions.md
infra/: deploy-scraper.sh  deploy-viewer.sh  setup.sh
stdb_viewer/: __init__.py  __main__.py  database.py  handler.py
stdb_viewer/static/css/: style.css
stdb_viewer/static/js/: app.js
stdb_viewer/templates/: index.html
tests/: test_database.py
